@@ -29,6 +29,7 @@ Bug fixes:
   exception.
 - i18n of box titles: making sure that the string is in unicode before encoding
   in ISO-8859-15
+- checking the existence of 'msgcmp' before running the 'TestOneMsg' tests.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - better caching of the base url.
